Cambios url + ajustes

--- a/en/about-us.html
+++ b/en/about-us.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="es" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana - About Us </title>
+  <title>Terminal de Combustible Campana</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <link rel="shortcut icon" href="images/favicon.png">
+  <meta name="description" content="We are an Argentine capital company that since 2015 has commercially managed the Pobater S.A. Fuel and Hydrocarbon Products Storage Terminal. for first-line companies, both local and international.">
+  <meta name="keywords" content="Fuel and Hydrocarbon Products Storage Terminal, Hidrovía channel of Paraná River, strategic location, professional excellence">
+  <link rel="shortcut icon" href="../images/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -19,19 +19,19 @@
     "@type": "Organization",
     "name": "Terminal de Combustible Campana",
     "legalName": "Terminal de Combustibles Campana SA",
-    "url": "tccar.com.ar",
+    "url": "https://tccar.com.ar",
     "logo": "https://tccar.com.ar/images/logo_tcc.png",
     "foundingDate": "2014-11",
     "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Avenida del Libertador 498, 4to piso",
-      "addressLocality": "Ciudad Autónoma de Buenos Aires",
-      "addressRegion": "Buenos Aires",
-      "postalCode": "1001",
-      "addressCountry": "Argentina"
+        "@type": "PostalAddress",
+        "streetAddress": "Avenida del Libertador 498, 4to piso",
+        "addressLocality": "Ciudad Autónoma de Buenos Aires",
+        "addressRegion": "Buenos Aires",
+        "postalCode": "1001",
+        "addressCountry": "Argentina"
+      }
     }
-    }
-  </script>
+    </script>
 </head>
 
 <body>
@@ -42,16 +42,14 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="home.html">
-          <h1 class="sr-only">Terminal de Combustible Campana</h1>
-        </a>
+        <a class="logo" href="/en/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="home.html">Home</a>
+              <a class="nav-link text-truncate" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate" href="about-us.html">About Us</a>
@@ -66,7 +64,7 @@
               <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ESP</a>
+              <a class="nav-link text-truncate m-0" href="/"><i class="material-icons">language</i>ESP</a>
             </li>
           </ul>
         </div>
@@ -110,10 +108,9 @@
         </div>
       </div>
 
-<div class="pt-4 my-md-5 pt-md-5 border-top" style="max-width: 80%;
-margin: 0 auto;">  </div>
+      <hr class="separator pt-4 my-4 my-lg-5 pt-md-5 border-top">
 
-      <div class="container pt-4 mb-5 text-center p-4 mb-3 bg-light rounded">
+      <div class="container pt-4 mb-5 text-center p-lg-4 pt-3 pt-lg-5 bg-light rounded">
         <iframe width="700" height="380" src="https://www.youtube.com/embed/3ddcJBvtRqY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
@@ -148,10 +145,10 @@ margin: 0 auto;">  </div>
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="home.html">Home</a>
+                <a class="text-truncate" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="ntext-truncate" href="about-us.html">Nosotros</a>
+                <a class="ntext-truncate" href="about-us.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="text-truncate" href="facilities.html">Facilities</a>
@@ -180,7 +177,7 @@ margin: 0 auto;">  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  <script src="script/main.js"></script>
+  <script src="../script/main.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
