--- a/en/facilities.html
+++ b/en/facilities.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
-<html lang="es" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana - Facilities</title>
+  <title>Terminal de Combustible Campana</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <link rel="shortcut icon" href="images/favicon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+  <meta name="description" content="We are an Argentine capital company that since 2015 has commercially managed the Pobater S.A. Fuel and Hydrocarbon Products Storage Terminal. for first-line companies, both local and international.">
+  <meta name="keywords" content="Fuel and Hydrocarbon Products Storage Terminal, Hidrovía channel of Paraná River, strategic location, professional excellence">
+  <link rel="shortcut icon" href="../images/favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="../styles/css/main.css">
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Terminal de Combustible Campana",
+    "legalName": "Terminal de Combustibles Campana SA",
+    "url": "https://tccar.com.ar",
+    "logo": "https://tccar.com.ar/images/logo_tcc.png",
+    "foundingDate": "2014-11",
+    "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Avenida del Libertador 498, 4to piso",
+        "addressLocality": "Ciudad Autónoma de Buenos Aires",
+        "addressRegion": "Buenos Aires",
+        "postalCode": "1001",
+        "addressCountry": "Argentina"
+      }
+    }
+    </script>
 </head>
 
 <body>
@@ -23,14 +42,14 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="home.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="/en/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="home.html">Home</a>
+              <a class="nav-link text-truncate" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate" href="about-us.html">About Us</a>
@@ -45,7 +64,7 @@
               <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ESP</a>
+              <a class="nav-link text-truncate m-0" href="/"><i class="material-icons">language</i>ESP</a>
             </li>
           </ul>
         </div>
@@ -86,7 +105,7 @@
             <div class="box-instalaciones box-almacenamiento bg-gray mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
               <div class="my-3 p-3">
                 <h2 class="display-5">Storage Capacity</h2>
-                <p class="lead">The terminal has a total storage capacity of more than 140 thousand m<sup>3</sup>distributed in 11 main fiscal tanks with volumes between 6,000-26,000 m<sup>3</sup>and 55 smaller ones with volumes from 300-1,000 m<sup>3</sup>.</p>
+                <p class="lead">The terminal has a total storage capacity of more than 140 thousand m<sup>3</sup> distributed in 11 main fiscal tanks with volumes between 6,000-26,000 m<sup>3</sup> and 55 smaller ones with volumes from 300-1,000 m<sup>3</sup>.</p>
               </div>
             </div>
             <div class="box-instalaciones box-terreno bg-green mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
@@ -131,7 +150,7 @@
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="home.html">Home</a>
+                <a class="text-truncate" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="ntext-truncate" href="about-us.html">About Us</a>
@@ -163,7 +182,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  <script src="script/main.js"></script>
+  <script src="../script/main.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
