--- a/en/services.html
+++ b/en/services.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="es" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana - Services</title>
+  <title>Terminal de Combustible Campana</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <link rel="shortcut icon" href="images/favicon.png">
+  <meta name="description" content="We are an Argentine capital company that since 2015 has commercially managed the Pobater S.A. Fuel and Hydrocarbon Products Storage Terminal. for first-line companies, both local and international.">
+  <meta name="keywords" content="Fuel and Hydrocarbon Products Storage Terminal, Hidrovía channel of Paraná River, strategic location, professional excellence">
+  <link rel="shortcut icon" href="../images/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -19,59 +19,59 @@
     "@type": "Organization",
     "name": "Terminal de Combustible Campana",
     "legalName": "Terminal de Combustibles Campana SA",
-    "url": "tccar.com.ar",
+    "url": "https://tccar.com.ar",
     "logo": "https://tccar.com.ar/images/logo_tcc.png",
     "foundingDate": "2014-11",
     "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Avenida del Libertador 498, 4to piso",
-      "addressLocality": "Ciudad Autónoma de Buenos Aires",
-      "addressRegion": "Buenos Aires",
-      "postalCode": "1001",
-      "addressCountry": "Argentina"
-    }
+        "@type": "PostalAddress",
+        "streetAddress": "Avenida del Libertador 498, 4to piso",
+        "addressLocality": "Ciudad Autónoma de Buenos Aires",
+        "addressRegion": "Buenos Aires",
+        "postalCode": "1001",
+        "addressCountry": "Argentina"
+      }
     }
     </script>
 </head>
 
 <body>
 
-    <header id="header" itemscope itemtype="https://schema.org/WPHeader">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <div class="container">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="logo" href="home.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
-          <div class="collapse navbar-collapse" id="nav">
-            <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
-              <li class="d-inline d-lg-none px-3 py-2 menu-close">
-                <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate" href="home.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate" href="about-us.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate" href="facilities.html">Facilities</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate" href="services.html">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
-              </li>
-              <li class="nav-item language d-flex align-items-center">
-                <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ESP</a>
-              </li>
-            </ul>
-          </div>
-
+  <header id="header" itemscope itemtype="https://schema.org/WPHeader">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="logo" href="/en/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <div class="collapse navbar-collapse" id="nav">
+          <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
+            <li class="d-inline d-lg-none px-3 py-2 menu-close">
+              <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="about-us.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="facilities.html">Facilities</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
+            </li>
+            <li class="nav-item language d-flex align-items-center">
+              <a class="nav-link text-truncate m-0" href="/"><i class="material-icons">language</i>ESP</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+
+      </div>
+    </nav>
+  </header>
 
     <main>
       <section class="services">
@@ -92,7 +92,7 @@
                   <h3>Logistics Service</h3>
                   <p class="lead">The terminal provides an efficient comprehensive logistics service which includes the loading and unloading of ships and trucks with fuel, storage tanks and subsequent dispatch of ships and trucks.</p>
                 </div>
-                <img class="shadow-sm mx-auto" src="images/servicios-1.png" alt="Hombres trabajando">
+                <img class="shadow-sm mx-auto" src="../images/servicios-1.jpg" alt="Hombres trabajando">
               </div>
 
               <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
@@ -105,7 +105,7 @@
                     <li>Ship services</li>
                   </ul>
                 </div>
-                <img class="shadow-sm mx-auto" src="images/servicios-2.png" alt="Hombres trabajando">
+                <img class="shadow-sm mx-auto" src="../images/servicios-2.jpg" alt="Hombres trabajando">
               </div>
 
             </div>
@@ -145,7 +145,7 @@
             <div class="col-lg-2">
               <ul class="footer-nav mb-0">
                 <li class="nav-item">
-                  <a class="text-truncate" href="home.html">Home</a>
+                  <a class="text-truncate" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="ntext-truncate" href="about-us.html">About Us</a>
@@ -177,7 +177,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="script/main.js"></script>
+    <script src="../script/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
