--- a/servicios.html
+++ b/servicios.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana - Servicios</title>
+  <title>Terminal de Combustible Campana</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Terminal de Combustible Campana es una compañía de capitales argentinos que, desde 2015 gestiona comercialmente la Terminal de almacenamiento de combustibles y productos hidrocarburíferos de Pobater S.A. para empresas de primera línea, tanto locales como internacionales.">
+  <meta name="keywords" content="terminal de combustibles, almacenamiento de combustibles, productos hidrocarburíferos, Hidrovía del río Paraná, ubicación estratégica, excelencia profesional">
   <link rel="shortcut icon" href="images/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -19,59 +19,59 @@
     "@type": "Organization",
     "name": "Terminal de Combustible Campana",
     "legalName": "Terminal de Combustibles Campana SA",
-    "url": "tccar.com.ar",
+    "url": "https://tccar.com.ar",
     "logo": "https://tccar.com.ar/images/logo_tcc.png",
     "foundingDate": "2014-11",
     "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Avenida del Libertador 498, 4to piso",
-      "addressLocality": "Ciudad Autónoma de Buenos Aires",
-      "addressRegion": "Buenos Aires",
-      "postalCode": "1001",
-      "addressCountry": "Argentina"
-    }
+        "@type": "PostalAddress",
+        "streetAddress": "Avenida del Libertador 498, 4to piso",
+        "addressLocality": "Ciudad Autónoma de Buenos Aires",
+        "addressRegion": "Buenos Aires",
+        "postalCode": "1001",
+        "addressCountry": "Argentina"
+      }
     }
     </script>
 </head>
 
 <body>
 
-    <header id="header" itemscope itemtype="https://schema.org/WPHeader">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <div class="container">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="logo" href="index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
-          <div class="collapse navbar-collapse" id="nav">
-            <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
-              <li class="d-inline d-lg-none px-3 py-2 menu-close">
-                <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate" href="instalaciones.html">Instalaciones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate" href="servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
-              </li>
-              <li class="nav-item language d-flex align-items-center">
-                <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ENG</a>
-              </li>
-            </ul>
-          </div>
-
+  <header id="header" itemscope itemtype="https://schema.org/WPHeader">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="logo" href="/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <div class="collapse navbar-collapse" id="nav">
+          <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
+            <li class="d-inline d-lg-none px-3 py-2 menu-close">
+              <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="instalaciones.html">Instalaciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
+            </li>
+            <li class="nav-item language d-flex align-items-center">
+              <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ENG</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+
+      </div>
+    </nav>
+  </header>
 
     <main>
       <section class="services">
@@ -92,7 +92,7 @@
                   <h3>Servicio Logístico</h3>
                   <p class="lead">La terminal provee un servicio logístico integral eficiente, que incluye la carga y descarga de barcos y camiones con combustibles, tanques de almacenamiento y posterior despacho de embarcaciones y camiones.</p>
                 </div>
-                <img class="shadow-sm mx-auto" src="images/servicios-1.png" alt="Hombres trabajando">
+                <img class="shadow-sm mx-auto" src="images/servicios-1.jpg" alt="Hombres trabajando">
               </div>
 
               <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
@@ -105,7 +105,7 @@
                     <li>Servicios a barcos</li>
                   </ul>
                 </div>
-                <img class="shadow-sm mx-auto" src="images/servicios-2.png" alt="Hombres trabajando">
+                <img class="shadow-sm mx-auto" src="images/servicios-2.jpg" alt="Hombres trabajando">
               </div>
 
             </div>
