--- a/en/index.html
+++ b/en/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="es" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <title>Terminal de Combustible Campana</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <link rel="shortcut icon" href="images/favicon.png">
+  <meta name="description" content="We are an Argentine capital company that since 2015 has commercially managed the Pobater S.A. Fuel and Hydrocarbon Products Storage Terminal. for first-line companies, both local and international.">
+  <meta name="keywords" content="Fuel and Hydrocarbon Products Storage Terminal, Hidrovía channel of Paraná River, strategic location, professional excellence">
+  <link rel="shortcut icon" href="../images/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -19,17 +19,17 @@
     "@type": "Organization",
     "name": "Terminal de Combustible Campana",
     "legalName": "Terminal de Combustibles Campana SA",
-    "url": "tccar.com.ar",
+    "url": "https://tccar.com.ar",
     "logo": "https://tccar.com.ar/images/logo_tcc.png",
     "foundingDate": "2014-11",
     "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Avenida del Libertador 498, 4to piso",
-      "addressLocality": "Ciudad Autónoma de Buenos Aires",
-      "addressRegion": "Buenos Aires",
-      "postalCode": "1001",
-      "addressCountry": "Argentina"
-    }
+        "@type": "PostalAddress",
+        "streetAddress": "Avenida del Libertador 498, 4to piso",
+        "addressLocality": "Ciudad Autónoma de Buenos Aires",
+        "addressRegion": "Buenos Aires",
+        "postalCode": "1001",
+        "addressCountry": "Argentina"
+      }
     }
     </script>
 </head>
@@ -42,20 +42,20 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="home.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="/en/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="home.html">Home</a>
+              <a class="nav-link text-truncate" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate" href="about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="Facilities.html">Facilities</a>
+              <a class="nav-link text-truncate" href="facilities.html">Facilities</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate" href="services.html">Services</a>
@@ -64,7 +64,7 @@
               <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ESP</a>
+              <a class="nav-link text-truncate m-0" href="/"><i class="material-icons">language</i>ESP</a>
             </li>
           </ul>
         </div>
@@ -85,21 +85,21 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/slide-1.jpg" class="d-block w-100" alt="Ubicación Estratégica">
+            <img src="../images/slide-1.jpg" class="d-block w-100" alt="Strategic location">
             <div class="carousel-caption">
               <h5>Strategic location</h5>
               <p>Our terminal is located at the entrance to the Paraná River Waterway.</p>
             </div>
           </div>
           <div class="carousel-item tank-slide">
-            <img src="images/slide-2.jpg" class="d-block w-100" alt="Capacidad técnica y logística">
+            <img src="../images/slide-2.jpg" class="d-block w-100" alt="Logistical and technical capacity">
             <div class="carousel-caption">
-              <h5>Logistical and Technical capacity</h5>
+              <h5>Logistical and technical capacity</h5>
               <p>We have the place and resources necessary for your operations.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/slide-3.jpg" class="d-block w-100" alt="Excelencia profesional">
+            <img src="../images/slide-3.jpg" class="d-block w-100" alt="Profesional excellence">
             <div class="carousel-caption">
               <h5>Professional excellence</h5>
               <p>We apply the highest international standards of safety and care of the environment.</p>
@@ -131,24 +131,24 @@
 
             <div class="item text-center" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
               <figure>
-                <img src="images/boat-from-front-view.png" alt="Puerto de 250 M">
+                <img src="../images/boat-from-front-view.png" alt="250 m port">
               </figure>
-              <h4><span>250 mt</span> port enabled for exportation and importation operations.</h4>
+              <h4><span>250 m</span> port enabled for exportation and importation operations.</h4>
             </div>
 
             <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
               <figure>
-                <img src="images/tank.png" alt="140 MIL M3 DE ALMACENAMIENTO">
+                <img src="../images/tank.png" alt="140 thousand m3 of storage">
               </figure>
-              <h4><span>140 thousand mt<sup>3</sup></span> of storage</h4>
+              <h4><span>140 thousand m<sup>3</sup></span> of storage</h4>
             </div>
 
 
             <div class="item text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">
               <figure>
-                <img src="images/truck.png" alt="AREA DE OPERACIONES">
+                <img src="../images/truck.png" alt="Operations area">
               </figure>
-              <h4>Operations area to dispatch up to<span>4.000 mt<sup>3</sup></span>per day</h4>
+              <h4>Operations area to dispatch up to <span>4.000 m<sup>3</sup></span> per day</h4>
             </div>
 
 
@@ -188,13 +188,13 @@
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="home.html">Home</a>
+                <a class="text-truncate" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="ntext-truncate" href="about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="Facilities.html">Facilities</a>
+                <a class="text-truncate" href="facilities.html">Facilities</a>
               </li>
               <li class="nav-item">
                 <a class="text-truncate" href="services.html">Services</a>
@@ -220,7 +220,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  <script src="script/main.js"></script>
+  <script src="../script/main.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
