--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Terminal de Combustible Campana</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Terminal de Combustible Campana es una compañía de capitales argentinos que, desde 2015 gestiona comercialmente la Terminal de almacenamiento de combustibles y productos hidrocarburíferos de Pobater S.A. para empresas de primera línea, tanto locales como internacionales.">
+  <meta name="keywords" content="terminal de combustibles, almacenamiento de combustibles, productos hidrocarburíferos, Hidrovía del río Paraná, ubicación estratégica, excelencia profesional">
   <link rel="shortcut icon" href="images/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -19,17 +19,17 @@
     "@type": "Organization",
     "name": "Terminal de Combustible Campana",
     "legalName": "Terminal de Combustibles Campana SA",
-    "url": "tccar.com.ar",
+    "url": "https://tccar.com.ar",
     "logo": "https://tccar.com.ar/images/logo_tcc.png",
     "foundingDate": "2014-11",
     "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Avenida del Libertador 498, 4to piso",
-      "addressLocality": "Ciudad Autónoma de Buenos Aires",
-      "addressRegion": "Buenos Aires",
-      "postalCode": "1001",
-      "addressCountry": "Argentina"
-    }
+        "@type": "PostalAddress",
+        "streetAddress": "Avenida del Libertador 498, 4to piso",
+        "addressLocality": "Ciudad Autónoma de Buenos Aires",
+        "addressRegion": "Buenos Aires",
+        "postalCode": "1001",
+        "addressCountry": "Argentina"
+      }
     }
     </script>
 </head>
@@ -42,7 +42,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
@@ -131,14 +131,14 @@
 
             <div class="item text-center" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
               <figure>
-                <img src="images/boat-from-front-view.png" alt="Puerto de 250 M">
+                <img src="images/boat-from-front-view.png" alt="Puerto de 250 m">
               </figure>
               <h4>Puerto de <span>250 m</span> habilitado para exportación e importación.</h4>
             </div>
 
             <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
               <figure>
-                <img src="images/tank.png" alt="140 MIL M3 DE ALMACENAMIENTO">
+                <img src="images/tank.png" alt="140 mil m3 de almacenamiento">
               </figure>
               <h4><span>140 mil m<sup>3</sup></span> de almacenamiento</h4>
             </div>
@@ -146,7 +146,7 @@
 
             <div class="item text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">
               <figure>
-                <img src="images/truck.png" alt="AREA DE OPERACIONES">
+                <img src="images/truck.png" alt="Área de operaciones">
               </figure>
               <h4>Área de operaciones para despachar hasta <span>4.000 m<sup>3</sup></span> diarios</h4>
             </div>
