--- a/nosotros.html
+++ b/nosotros.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana - Nosotros</title>
+  <title>Terminal de Combustible Campana</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Terminal de Combustible Campana es una compañía de capitales argentinos que, desde 2015 gestiona comercialmente la Terminal de almacenamiento de combustibles y productos hidrocarburíferos de Pobater S.A. para empresas de primera línea, tanto locales como internacionales.">
+  <meta name="keywords" content="terminal de combustibles, almacenamiento de combustibles, productos hidrocarburíferos, Hidrovía del río Paraná, ubicación estratégica, excelencia profesional">
   <link rel="shortcut icon" href="images/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -19,19 +19,19 @@
     "@type": "Organization",
     "name": "Terminal de Combustible Campana",
     "legalName": "Terminal de Combustibles Campana SA",
-    "url": "tccar.com.ar",
+    "url": "https://tccar.com.ar",
     "logo": "https://tccar.com.ar/images/logo_tcc.png",
     "foundingDate": "2014-11",
     "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Avenida del Libertador 498, 4to piso",
-      "addressLocality": "Ciudad Autónoma de Buenos Aires",
-      "addressRegion": "Buenos Aires",
-      "postalCode": "1001",
-      "addressCountry": "Argentina"
+        "@type": "PostalAddress",
+        "streetAddress": "Avenida del Libertador 498, 4to piso",
+        "addressLocality": "Ciudad Autónoma de Buenos Aires",
+        "addressRegion": "Buenos Aires",
+        "postalCode": "1001",
+        "addressCountry": "Argentina"
+      }
     }
-    }
-  </script>
+    </script>
 </head>
 
 <body>
@@ -42,9 +42,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="index.html">
-          <h1 class="sr-only">Terminal de Combustible Campana</h1>
-        </a>
+        <a class="logo" href="/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
@@ -111,10 +109,9 @@
         </div>
       </div>
 
-<div class="pt-4 my-md-5 pt-md-5 border-top" style="max-width: 80%;
-margin: 0 auto;">  </div>
+      <hr class="separator pt-4 my-4 my-lg-5 pt-md-5 border-top">
 
-      <div class="container pt-4 mb-5 text-center p-4 mb-3 bg-light rounded">
+      <div class="container mb-5 text-center p-lg-4 pt-3 pt-lg-5 bg-light rounded">
         <iframe width="700" height="380" src="https://www.youtube.com/embed/3ddcJBvtRqY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
