--- a/en/facilities.html
+++ b/en/facilities.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <base href="/TCC_Puente/">
+  <base href="https://matiasmd8610.github.io/TCC_Puente/">
   <meta charset="utf-8">
   <title>Terminal de Combustible Campana</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
