--- a/en/services.html
+++ b/en/services.html
@@ -64,7 +64,7 @@
               <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0" href="/"><i class="material-icons">language</i>ESP</a>
+              <a class="nav-link text-truncate m-0" href="https://matiasmd8610.github.io/TCC_Puente/"><i class="material-icons">language</i>ESP</a>
             </li>
           </ul>
         </div>
