--- a/instalaciones.html
+++ b/instalaciones.html
@@ -64,7 +64,7 @@
               <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
             </li>
             <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ENG</a>
+              <a class="nav-link text-truncate m-0" href="en/"><i class="material-icons">language</i>ENG</a>
             </li>
           </ul>
         </div>
