--- a/en/services.html
+++ b/en/services.html
@@ -87,7 +87,7 @@
 
             <div class="services-wrapper d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 
-              <div class="bg-darker mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
+              <div class="box-services bg-darker mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
                 <div class="box-text mb-3 py-2 p-lg-3">
                   <h3>Logistics Service</h3>
                   <p class="lead">The terminal provides an efficient comprehensive logistics service which includes the loading and unloading of ships and trucks with fuel, storage tanks and subsequent dispatch of ships and trucks.</p>
@@ -95,7 +95,7 @@
                 <img class="shadow-sm mx-auto" src="../images/servicios-1.jpg" alt="Hombres trabajando">
               </div>
 
-              <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
+              <div class="box-services bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
                 <div class="box-text mb-3 py-2 p-lg-3">
                   <h3>More Services</h3>
                   <p class="lead">We also offer our clients a wide variety of additional services such as:</p>
