--- a/en/facilities.html
+++ b/en/facilities.html
@@ -88,13 +88,13 @@
 
           <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
             <div class="box-instalaciones box-puerto bg-green mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-right" data-aos-duration="1000">
-              <div class="my-3 py-3">
+              <div class="my-3 p-lg-3">
                 <h2 class="display-5">The Port</h2>
                 <p class="lead">Our terminal has a 250-meter port that allows the comfortable reception of vessels up to 32 feet draft and 220 meters in length, enabled for import and export operations.</p>
               </div>
             </div>
             <div class="box-instalaciones box-operaciones bg-gray mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">
-              <div class="my-3 p-3">
+              <div class="my-3 p-lg-3">
                 <h2 class="display-5">Operations Area</h2>
                 <p class="lead">The port includes an operations area for trucks loading with availability to dispatch up to 4,000 m<sup>3</sup> per day and also a fiscal balance.</p>
               </div>
@@ -103,13 +103,13 @@
 
           <div class="d-md-flex flex-md-equal w-100 pl-md-3 row-2">
             <div class="box-instalaciones box-almacenamiento bg-gray mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
-              <div class="my-3 p-3">
+              <div class="my-3 p-lg-3">
                 <h2 class="display-5">Storage Capacity</h2>
                 <p class="lead">The terminal has a total storage capacity of more than 140 thousand m<sup>3</sup> distributed in 11 main fiscal tanks with volumes between 6,000-26,000 m<sup>3</sup> and 55 smaller ones with volumes from 300-1,000 m<sup>3</sup>.</p>
               </div>
             </div>
             <div class="box-instalaciones box-terreno bg-green mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
-              <div class="my-3 py-3">
+              <div class="my-3 p-lg-3">
                 <h2 class="display-5">Future Expansion</h2>
                 <p class="lead">Anticipating the growing demand of our clients, the land has more than 90 hectares of inactive space to develop a future expansion.</p>
               </div>
