--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
@@ -133,7 +133,7 @@
               <figure>
                 <img src="images/boat-from-front-view.png" alt="Puerto de 250 m">
               </figure>
-              <h4>Puerto de <span>250 m</span> habilitado para exportación e importación.</h4>
+              <h4>Puerto de <span>250 m</span> habilitado para exportación e importación</h4>
             </div>
 
             <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
