--- a/en/index.html
+++ b/en/index.html
@@ -34,7 +34,7 @@
     </script>
 </head>
 
-<body>
+<body class="eng">
 
   <header id="header" itemscope itemtype="https://schema.org/WPHeader">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -42,7 +42,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="/en/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="en/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
@@ -133,7 +133,7 @@
               <figure>
                 <img src="../images/boat-from-front-view.png" alt="250 m port">
               </figure>
-              <h4><span>250 m</span> port enabled for exportation and importation operations.</h4>
+              <h4><span>250 m</span> port enabled for exportation and importation operations</h4>
             </div>
 
             <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
@@ -144,7 +144,7 @@
             </div>
 
 
-            <div class="item text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">
+            <div class="item text-center item-truck" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">
               <figure>
                 <img src="../images/truck.png" alt="Operations area">
               </figure>
