--- a/en/index.html
+++ b/en/index.html
@@ -136,7 +136,7 @@
               <h4><span>250 m</span> port enabled for exportation and importation operations</h4>
             </div>
 
-            <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
+            <div class="item text-center" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
               <figure>
                 <img src="../images/tank.png" alt="140 thousand m3 of storage">
               </figure>
@@ -144,7 +144,7 @@
             </div>
 
 
-            <div class="item text-center item-truck" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">
+            <div class="item text-center item-truck" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
               <figure>
                 <img src="../images/truck.png" alt="Operations area">
               </figure>
