--- a/en/about-us.html
+++ b/en/about-us.html
@@ -108,7 +108,9 @@
         </div>
       </div>
 
-      <hr class="separator pt-4 my-4 my-lg-5 pt-md-5 border-top">
+      <div class="container">
+        <hr class="separator pt-4 my-4 my-lg-5 pt-md-5 border-top">
+      </div>
 
       <div class="container pt-4 mb-5 text-center p-lg-4 pt-3 pt-lg-5 bg-light rounded">
         <iframe width="700" height="380" src="https://www.youtube.com/embed/3ddcJBvtRqY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
