Agrego email en footer

--- a/en/about-us.html
+++ b/en/about-us.html
@@ -129,16 +129,18 @@
           <div class="col-md-6 col-lg-5 mb-4 mb-lg-0">
             <span class="d-block mb-2 location">OFFICES</span>
             <address class="mb-1">
-              <i class="material-icons mb-5 mb-lg-2">location_on</i> Avenida del Libertador 498, 4th Floor<br>
+              <i class="material-icons mb-4 mb-sm-3 mb-lg-2 location-icon" aria-label="Location">location_on</i> Avenida del Libertador 498, 4th Floor<br>
               (1001) Buenos Aires - Argentina<br>
             </address>
             <i class="material-icons">phone</i> Tel: <a href="tel:+54117078-55600">+54 11 7078-5560</a>
+            <br>
+            <span class="d-inline-block mt-2"><i class="material-icons" aria-label="e-mail">mail_outline</i><a href="mailto:info@tccar.com.ar">info@tccar.com.ar</a></span>
           </div>
 
           <div class="col-md-6 col-lg-5 mb-3 mb-lg-0">
             <span class="d-block mb-2 location">TERMINAL</span>
             <address class="mb-1">
-              <i class="material-icons mb-5">location_on</i> Avenida Larrabure 650 <br>
+              <i class="material-icons mb-5" aria-label="Location">location_on</i> Avenida Larrabure 650 <br>
               (2804) Campana <br>
               Provincia de Buenos Aires
             </address>
